# snapic

./: .gitignore  README.md  package-lock.json  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/snapic/: main.py  monitoring.py
backend/src/snapic/api/: admin_routes.py  event_routes.py  rate_limit.py  routes.py  schemas.py  share_store.py  stripe_routes.py  studio_routes.py
backend/src/snapic/auth/: jwt.py  org.py
backend/src/snapic/db/: __init__.py  affiliates.py  approval_email.py  audit_log.py  auth_admin.py  invites.py  repository.py  supabase_client.py
backend/src/snapic/face/: demo_match.py  detector.py  event_match.py  gallery_index.py  gallery_match.py  images.py  indexing.py  matcher.py  pipeline.py  portrait_quality.py
backend/tests/: test_api.py  test_couple_match.py  test_images.py  test_matcher.py  test_share_reload.py
docs/: BACKUP_RUNBOOK.md  EMAIL_SETUP.md  MARKETING_CAMPAIGNS.md  ON_CALL.md  SMOKE_TEST.md  SUPABASE_SETUP.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  AppRouter.tsx  main.tsx  navigation.ts  types.ts  vite-env.d.ts
scripts/: generate_pwa_icons.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_storage.sql  003_gallery_content_hash.sql  004_album_sections_lifecycle.sql  005_gallery_face_index.sql  006_event_onboarding.sql  007_protect_super_admin_role.sql  008_admin_audit_log.sql  009_admin_realtime.sql  (+6 more)
(+175 files in other folders)
