[project]
name = "snapic"
version = "0.1.0"
description = "Face photo matcher — find your photos in a gallery using a selfie"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=10.4.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.19.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
